# fast-midi-jam

./: .gitignore  CMakeLists.txt  README.md  aarch64-toolchain.cmake  build.bat  build.sh  client.cpp  midi_utils.cpp  midi_utils.h  server.cpp
static/: index.html
